--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+    <link rel="stylesheet" href="components/header/headerComponent.css">
     <link rel="stylesheet" href="config.css">
+
 
 </head>
 <body>
     
-    <script src="./main.js"></script>
+    <script src="./main.js" type="module"></script>
+    
 </body>
 </html>
