--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+    <link rel="stylesheet" href="./components/nav/navComponent.css">
     <link rel="stylesheet" href="./components/seccion1/seccion1Component.css">
     <link rel="stylesheet" href="./modulos/item/itemModulo.css">
     <link rel="stylesheet" href="components/header/headerComponent.css">
